--- a/content/work-history.yaml
+++ b/content/work-history.yaml
@@ -1,7 +1,7 @@
 - company: Aalto University
   position: Research Assistant (Intelligent Robotics)
   period: April 2020 - July 2020
-  url: https://atomic.studio
+  url: https://irobotics.aalto.fi/
 
 - company: Savana Médica
   position: Software Engineer
