profile picture updated

--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -3,7 +3,7 @@
   name: Jesús Copado
   email: copado.je@gmail.com
   profession: Software / ML Engineer
-  image: images/onda.jpg
+  image: images/onda_blur_sat.jpeg
   location: Budapest, Hungary
   relocation: true
   company: "-"
