--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -11,7 +11,7 @@
   focus: Looking for a Master Thesis in AI
   focus_url: https://masterschool.eitdigital.eu/programmes/aus/
   about: |
-    Highly interested in the fields of artificial intelligence, bioinformatics and computational vision, especially in its applications in areas with real human impact such as biomedicine. 
+    Highly interested in the fields of artificial intelligence, bioinformatics and computational vision, especially in their applications in areas with real human impact such as biomedicine. 
     
     Two years of work experience in various sectors, such as automotive, banking and healthcare. Studies in Spain, Germany, Finland and Hungary. Currently finishing a Double Master's Degree in Autonomous Systems and looking for a Master Thesis in the field of AI. Passionate about cinema and sports.
   skills:
