added information about my master thesis project at sztaki

--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -6,14 +6,14 @@
   image: images/onda.jpeg
   location: Budapest, Hungary
   relocation: true
-  company: "-"
+  company: SZTAKI
   for_hire: true
-  focus: Looking for a Master Thesis in AI
+  focus: Looking for positions in AI
   focus_url: https://masterschool.eitdigital.eu/programmes/aus/
   about: |
-    Highly interested in the fields of artificial intelligence, bioinformatics and computer vision, especially in their applications in areas with real human impact such as biomedicine. 
+    Highly interested in the fields of artificial intelligence, bioinformatics and computer vision, especially in their applications in areas with real human impact. 
     
-    Two years of work experience in various sectors, such as automotive, banking and healthcare. Studies in Spain, Germany, Finland and Hungary. Currently finishing a Double Master's Degree in Autonomous Systems and looking for a Master Thesis position in the field of AI. Passionate about cinema and sports.
+    Two years of work experience in various sectors, such as automotive, banking and healthcare. Studies in Spain, Germany, Finland and Hungary. Currently finishing a Double Master's Degree in Autonomous Systems and looking for positions in the field of AI. Passionate about cinema and sports.
   skills:
     - Software Engineering
     - Artificial Intelligence
