--- a/content/work-history.yaml
+++ b/content/work-history.yaml
@@ -1,3 +1,8 @@
+- company: SZTAKI
+  position: Master Thesis Project (Machine Perception)
+  period: Feb 2021 - Jun 2021
+  url: https://www.sztaki.hu/en/science/departments/mplab
+
 - company: Aalto University
   position: Research Assistant (Intelligent Robotics)
   period: Apr 2020 - Jul 2020
