--- a/content/work-history.yaml
+++ b/content/work-history.yaml
@@ -1,3 +1,8 @@
+- company: Parkdepot
+  position: Deep Learning Engineer
+  period: Jul 2021 - Present
+  url: https://www.park-depot.com/en
+
 - company: SZTAKI
   position: Master Thesis Project (Machine Perception)
   period: Feb 2021 - Jun 2021
