about updated (graduated)

--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -13,7 +13,7 @@
   about: |
     Highly interested in the fields of artificial intelligence, bioinformatics and computer vision, especially in their applications in areas with real human impact. 
     
-    Two years of work experience in various sectors, such as automotive, banking and healthcare. Studies in Spain, Germany, Finland and Hungary. Currently finishing a Double Master's Degree in Autonomous Systems and looking for positions in the field of AI. Passionate about cinema and sports.
+    Two years of work experience in various sectors, such as automotive, banking and healthcare. Studies in Spain, Germany, Finland and Hungary. Graduated from a Double Master's Degree in Autonomous Systems (EIT Digital Master School). Passionate about cinema and sports.
   skills:
     - Software Engineering
     - Artificial Intelligence
