--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -11,9 +11,9 @@
   focus: Enabling contemporary parking solutions
   focus_url: https://www.park-depot.com/en
   about: |
-    Highly interested in the fields of artificial intelligence, bioinformatics and computer vision, especially in their applications in areas with real human impact. 
+    Highly interested in the fields of artificial intelligence and computer vision, especially in their applications in areas with real human impact. 
     
-    Two years of work experience in various sectors, such as automotive, banking and healthcare. Studies in Spain, Germany, Finland and Hungary. Graduated from a Double Master's Degree in Autonomous Systems (EIT Digital Master School). Passionate about cinema and sports.
+    Work experience in various sectors, such as automotive, banking and healthcare. Studies in Spain, Germany, Finland and Hungary. Graduated from a Double Master's Degree in Autonomous Systems (EIT Digital Master School). Passionate about cinema and sports.
   skills:
     - Software Engineering
     - Artificial Intelligence
