--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -8,7 +8,7 @@
   relocation: false
   company: Parkdepot
   for_hire: false
-  focus: Enabling contemporary parking solutions
+  focus: Building AI models for Computer Vision applications
   focus_url: https://www.park-depot.com/en
   about: |
     Highly interested in the fields of artificial intelligence and computer vision, especially in their applications in areas with real human impact. 
