--- a/content/social.yaml
+++ b/content/social.yaml
@@ -8,7 +8,7 @@
   url:
 
 - name: instagram
-  url:
+  url: https://www.instagram.com/_jesuscopado
 
 - name: dribbble
   url:
@@ -20,7 +20,7 @@
   url:
 
 - name: github
-  url: https://github.com/jesuscopado
+  url: 
 
 - name: goodreads
   url:
