--- a/content/work-history.yaml
+++ b/content/work-history.yaml
@@ -1,6 +1,11 @@
 - company: Parkdepot
+  position: Deep Learning Lead
+  period: Jul 2022 - Present
+  url: https://www.park-depot.com/en
+
+- company: Parkdepot
   position: Deep Learning Engineer
-  period: Jul 2021 - Present
+  period: Jul 2021 - Jul 2022
   url: https://www.park-depot.com/en
 
 - company: SZTAKI
