--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -3,7 +3,7 @@
   name: Jesús Copado
   email: copado.je@gmail.com
   profession: AI Engineer / Enthusiast / Artist
-  image: images/onda.jpeg
+  image: images/DSC09444_6.jpg
   location: Munich, Germany
   relocation: false
   company: Parkdepot
