--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -2,7 +2,7 @@
   initials: JC
   name: Jesús Copado
   email: copado.je@gmail.com
-  profession: AI Engineer / Enthusiast / Artist
+  profession: Artificial Intelligence Engineer
   image: images/DSC09444_6.jpg
   location: Munich, Germany
   relocation: false
@@ -13,7 +13,7 @@
   about: |
     Highly interested in the fields of artificial intelligence and computer vision, especially in their applications in areas with real human impact. 
     
-    Work experience in various sectors, such as automotive, banking and healthcare. Studies in Spain, Germany, Finland and Hungary. Graduated from a Double Master's Degree in Autonomous Systems (EIT Digital Master School). Passionate about cinema and sports.
+    Work experience in various sectors, such as automotive, banking and healthcare. Studies in Spain, Germany, Finland and Hungary. Graduated from a Double Master's Degree in Autonomous Systems with a minor in Innovation and Entrepreneurship (EIT Digital Master School). Passionate about cinema and sports.
   skills:
     - Artificial Intelligence
     - Software Engineering
