--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -4,7 +4,7 @@
   email: copado.je@gmail.com
   profession: Artificial Intelligence Engineer
   image: images/DSC09444_6.jpg
-  location: Munich, Germany
+  location: Madrid, Spain
   relocation: false
   company: Parkdepot
   for_hire: false
