Update work-history.yaml, added current Insud Pharma

--- a/content/work-history.yaml
+++ b/content/work-history.yaml
@@ -1,6 +1,11 @@
+- company: Insud Pharma
+  position: Lead Artificial Intelligence Engineer
+  period: Feb 2024 - Present
+  url: https://www.insudpharma.com/en/
+
 - company: Parkdepot
-  position: Deep Learning Lead
-  period: Jul 2022 - Present
+  position: Lead Deep Learning Engineer
+  period: Jul 2022 - Feb 2024
   url: https://www.park-depot.com/en
 
 - company: Parkdepot
