--- a/content/work-history.yaml
+++ b/content/work-history.yaml
@@ -14,7 +14,7 @@
   url: https://www.park-depot.com/en
 
 - company: SZTAKI
-  position: Master Thesis Project (Machine Perception)
+  position: Research Assistant (Machine Perception)
   period: Feb 2021 - Jun 2021
   url: https://www.sztaki.hu/en/science/departments/mplab
 
