--- a/content/social.yaml
+++ b/content/social.yaml
@@ -20,7 +20,7 @@
   url:
 
 - name: github
-  url: 
+  url: https://github.com/jesuscopado
 
 - name: goodreads
   url:
@@ -29,7 +29,7 @@
   url:
 
 - name: youtube
-  url:
+  url: https://www.youtube.com/@jesuscopado-en
 
 - name: medium
   url:
