--- a/content/work-history.yaml
+++ b/content/work-history.yaml
@@ -1,6 +1,11 @@
+- company: Nova
+  position: Head of AI
+  period: Apr 2025 - Present
+  url: https://www.novatalent.com/
+
 - company: Insud Pharma
   position: Lead Artificial Intelligence Engineer
-  period: Feb 2024 - Present
+  period: Feb 2024 - Apr 2025
   url: https://www.insudpharma.com/en/
 
 - company: Parkdepot
