Update profile image format to PNG and add project status for YouTube channel

--- a/content/profile.yaml
+++ b/content/profile.yaml
@@ -3,7 +3,7 @@
   name: Jesús Copado
   email: copado.je@gmail.com
   profession: Artificial Intelligence Engineer
-  image: images/grey_mid.jpeg
+  image: images/grey_mid.png
   location: Madrid, Spain
   relocation: false
   company: Nova
